--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     compileSdkVersion 28
 
     defaultConfig {
-        applicationId "com.example.androidassistant"
+        applicationId "com.toperc.aatools"
         minSdkVersion 18
         targetSdkVersion 28
         versionCode 1
