--- a/lib_aatools/src/main/AndroidManifest.xml
+++ b/lib_aatools/src/main/AndroidManifest.xml
@@ -1,30 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.lib_aatools">
+    package="com.toperc.lib_aatools">
 
+    <!--弹框权限-->
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+    <!--读写权限-->
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application>
 
         <activity
-            android:name="com.example.lib_aatools.base.AAToolsActivity"
+            android:name="com.toperc.lib_aatools.base.AAToolsActivity"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
             android:theme="@style/DevelopToolsTheme" />
 
         <activity
-            android:name="com.example.lib_aatools.tools.crash_log.CrashLogActivity"
+            android:name="com.toperc.lib_aatools.tools.crash_log.CrashLogActivity"
             android:screenOrientation="portrait"
             android:theme="@style/DevelopToolsTheme" />
 
         <activity
-            android:name="com.example.lib_aatools.tools.file.FileViewActivity"
+            android:name="com.toperc.lib_aatools.tools.file.FileViewActivity"
             android:screenOrientation="portrait"
             android:theme="@style/DevelopToolsTheme" />
 
         <service
-            android:name="com.example.lib_aatools.tools.tracker.TrackerService"
+            android:name="com.toperc.lib_aatools.tools.tracker.TrackerService"
             android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
 
             <intent-filter>
