--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.toperc.aatools">
+    package="com.ixinrun.aatools">
 
     <application
-        android:name=".MyApp"
+        android:name="com.ixinrun.aatools.MyApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidAssistant">
-        <activity android:name="com.toperc.aatools.MainActivity">
+        <activity android:name="com.ixinrun.aatools.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
