--- a/lib_aatools/src/main/AndroidManifest.xml
+++ b/lib_aatools/src/main/AndroidManifest.xml
@@ -27,19 +27,8 @@
             android:screenOrientation="portrait"
             android:theme="@style/DevelopToolsTheme" />
 
-        <service
-            android:name="com.ixinrun.lib_aatools.tools.tracker.TrackerService"
-            android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
+        <service android:name="com.ixinrun.lib_aatools.tools.tracker.TrackerService" />
 
-            <intent-filter>
-                <action android:name="android.accessibilityservice.AccessibilityService" />
-            </intent-filter>
-
-            <meta-data
-                android:name="android.accessibilityservice"
-                android:resource="@xml/accessibility_service_config" />
-
-        </service>
     </application>
 
 </manifest>
